# kingscraft-prv

./: Agents.md  CMakeLists.txt  TODO.txt  rating.txt
include/Bus/: BusUtil.hpp  Mailbox.hpp  Message.hpp  MessageBus.hpp
include/Core/: Camera.hpp  Chunk.hpp  ChunkMesher.hpp  Constants.hpp  FrameContext.hpp  Key.hpp  KeyBindHandler.hpp  KeyCodes.hpp  Keys.hpp  LoadingScreen.hpp  MainMenu.hpp  Registries.hpp  Registry.hpp  Screen.hpp  ScreenManager.hpp  TerrainGenerator.hpp  WorldScreen.hpp
include/Core/Blocks/: AirBlock.hpp  Block.hpp  Blocks.hpp  GrassBlock.hpp
include/Core/Resources/: BlockModel.hpp  ModelParser.hpp
include/Core/World/: Chunk.hpp  ChunkMesher.hpp  World.hpp  WorldScreen.hpp
include/Renderer/: Bloom.hpp  PostProcessing.hpp  Renderer.hpp  RendererSettings.hpp
include/Resource/: ResourceManager.hpp
include/Threads/: Engine.hpp  IO.hpp  Logger.hpp  Renderer.hpp  ResourceLoader.hpp
include/UI/: LogHandler.hpp  MemoryStream.hpp  NoesisXamlProvider.hpp  UiStyle.hpp  UiSystem.hpp  UiWrapper.hpp
include/UI/Debug/: UiDebugEditor.hpp  UiFpsCounter.hpp
include/UI/Elements/: UiButton.hpp  UiElement.hpp  UiGradientRect.hpp  UiRect.hpp  UiTextBlock.hpp
include/UI/Engine/: UiBatchQueue.hpp  UiEngine.hpp  UiFontAtlas.hpp  UiLabel.hpp  UiRenderer.hpp
include/Util/: LogUtils.hpp  Preloader.hpp  StringBuilder.hpp  TimeUtil.hpp
include/Utils/: Mailbox.hpp  Message.hpp  MessageBus.hpp  Worker.hpp
include/Vulkan/: App.hpp  Buffer.hpp  DescriptorManager.hpp  Device.hpp  FramebufferManager.hpp  Model.hpp  Pipeline.hpp  RenderPass.hpp  StagingArena.hpp  Swapchain.hpp  SyncObjects.hpp  Texture.hpp  TextureCache.hpp  Window.hpp
libs/NoesisGUI/: LICENSE.txt  THIRD_PARTY.txt  version.txt
libs/NoesisGUI/Data/: ThemePreview.xaml
libs/NoesisGUI/Doc/: App.ApplicationLauncher._Application.html  App.ApplicationLauncher._LocExtension.html  App.ApplicationLauncher._MessageBox.html  App.ApplicationLauncher._RichText.html  App.ApplicationLauncher._Window.html  App.Interactivity.Behaviors.html  App.Interactivity._AttachableCollection.html  App.Interactivity._AttachableObject.html  App.Interactivity._BackgroundEffectBehavior.html  App.Interactivity._Behavior.html  App.Interactivity._BehaviorCollection.html  App.Interactivity._BehaviorT.html  App.Interactivity._ChangePropertyAction.html  App.Interactivity._CollectionFilterBehavior.html  App.Interactivity._ComparisonCondition.html  (+543 more)
libs/glfw/: CMakeLists.txt
resources/shaders/: composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  simple_shader.vert  simple_shader.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
resources/ui/: MainWindow.xaml
src/: main.cpp
src/Bus/: MessageBus.cpp
src/Core/: Chunk.cpp  ChunkMesher.cpp  LoadingScreen.cpp  MainMenu.cpp  Registries.cpp  ScreenManager.cpp  WorldScreen.cpp
src/Renderer/: Bloom.cpp  PostProcessing.cpp  Renderer.cpp
src/Resource/: ResourceManager.cpp
src/Threads/: Engine.cpp  IO.cpp  Logger.cpp  Renderer.cpp  ResourceLoader.cpp
src/UI/: UISystem.cpp  UiWrapper.cpp
src/Util/: Preloader.cpp
src/Utils/: MessageBus.cpp
src/Vulkan/: App.cpp  Buffer.cpp  DescriptorManager.cpp  Device.cpp  FramebufferManager.cpp  Model.cpp  Pipeline.cpp  RenderPass.cpp  StagingArena.cpp  Swapchain.cpp  SyncObjects.cpp  Texture.cpp  TextureCache.cpp  Window.cpp
(+443 files in other folders)
